<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="total_bill">Bill</string>
    <string name="tip_percent">Percentage to Tip</string>
    <string name="split_number">No. of People</string>
    <string name="calculate">Calculate Tip</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="amount_per_person">Per Person</string>
    <string name="reset">Reset Calculator</string>
    <string name="logo">Home Page Logo</string>
</resources>
